--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,18 @@ apply plugin: 'java'
 
 repositories {
     jcenter()
+    maven {
+        url "http://maven.pterodactylus.net/"
+    }
 }
 
 dependencies {
+    compile group: 'net.pterodactylus', name: 'jFCPlib', version: '0.1.4'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
+    testCompile group: 'com.nitorcreations', name: 'junit-runners', version: '1.2'
 }
 
 apply plugin: 'idea'
