--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,18 @@ version = '0.1-SNAPSHOT'
 
 apply plugin: 'java'
 
+buildscript {
+    ext.kotlinVersion = '1.2.31'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath group: 'org.jetbrains.kotlin', name: 'kotlin-gradle-plugin', version: kotlinVersion
+    }
+}
+
+apply plugin: 'kotlin'
+
 repositories {
     jcenter()
     maven {
@@ -11,8 +23,10 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib'
     compile group: 'net.pterodactylus', name: 'jFCPlib', version: '0.1.5'
 
+    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
